--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "author": "Sukhman Hara",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
     "prettier": "3.3.3"
+  }, 
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"./src/**/*.js\""
   }
 }
