--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,18 @@
-// .vscode/launch.json
-
 {
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-      // Start the app and attach the debugger
-      {
-        "name": "Debug via npm run debug",
-        "request": "launch",
-        "cwd": "${workspaceFolder}",
-        "runtimeExecutable": "npm",
-        "runtimeArgs": ["run-script", "debug"],
-        "skipFiles": ["<node_internals>/**"],
-        "type": "node"
-      }
-    ]
-  }
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    // Start the app and attach the debugger
+    {
+      "name": "Debug via npm run debug",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "debug"],
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node",
+      "port": 9229, // Specify the debug port
+      "console": "integratedTerminal" // Use VSCode's terminal
+    }
+  ]
+}
