--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint \"./src/**/*.js\" \"tests/**/*.js\"",
     "start": "node src/server.js",
     "dev": "LOG_LEVEL=debug nodemon ./src/server.js --watch src",
-    "debug": "LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 ./src/index.js --watch src"
+    "debug": "LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 ./src/index.js --watch src", 
+    "test:integration": "hurl --test --glob \"tests/integration/**/*.hurl\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@orangeopensource/hurl": "^5.0.1",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
