added cd and edited fragments-definition.json

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -65,6 +65,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.update-task-def.outputs.task-definition }}
-          cluster: fragments-cluster
+          cluster: fragments-cluster-new
           service: fragments-service
           wait-for-service-stability: true
